--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "starwars-names",
-  "version": "1.0.0",
+  "name": "@local/starwars-names",
+  "version": "0.0.0-semantically-released",
   "description": "Get random Star wars names",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha src/index.test.js",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/RoystonS/starwars-names.git"
+    "url": "https://github.com/RoystonS/starwars-names.git"
   },
   "keywords": [
     "random",
@@ -23,5 +24,11 @@
   "homepage": "https://github.com/RoystonS/starwars-names#readme",
   "dependencies": {
     "unique-random-array": "^1.0.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0",
+    "semantic-release-cli": "^3.0.3",
+    "semantic-release": "^6.3.2"
   }
 }
