chore(releasing): Add conventional commit

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Get random Star wars names",
   "main": "src/index.js",
   "scripts": {
+    "commit": "git-cz",
     "test": "mocha src/index.test.js",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
@@ -27,8 +28,13 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "commitizen": "^2.9.5",
+    "cz-conventional-changelog": "^1.2.0",
     "mocha": "^3.2.0",
-    "semantic-release-cli": "^3.0.3",
-    "semantic-release": "^6.3.2"
+    "semantic-release": "^6.3.2",
+    "semantic-release-cli": "^3.0.3"
+  },
+  "czConfig": {
+    "path": "node_modules/cz-conventional-changelog"
   }
 }
