chore(releasing): Tweak config for semantic-release

--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
   },
   "czConfig": {
     "path": "node_modules/cz-conventional-changelog"
+  },
+  "release": {
+    "verifyConditions": { }
   }
 }
