--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Get random Star wars names",
   "main": "src/index.js",
   "scripts": {
+    "precommit": "npm test",
+    "prepush": "npm test",
     "commit": "git-cz",
     "test": "mocha src/index.test.js",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
@@ -30,6 +32,7 @@
     "chai": "^3.5.0",
     "commitizen": "^2.9.5",
     "cz-conventional-changelog": "^1.2.0",
+    "husky": "^0.13.1",
     "mocha": "^3.2.0",
     "semantic-release": "^6.3.2",
     "semantic-release-cli": "^3.0.3"
