--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,10 @@ node_js:
 before_script:
   - npm prune
 script:
-  - npm run test
-#after_success:
+  - npm run test:single
+  - npm run check-coverage
+after_success:
+  - npm run report-coverage
 #  - npm run semantic-release
 branches:
   except:
