chore(version): Update version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@local/starwars-names",
-  "version": "0.0.0-development",
+  "version": "1.4.0",
   "description": "Get random Star wars names",
   "main": "src/index.js",
   "scripts": {
